--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "threads",
-  "version": "1.0.0",
+  "name": "@tocha688/threads",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
